tests/Tuc/Fixtures/errors/InvalidParticipant.tuc
tuc parse error test
participants
    GenericService domain foo bar
